2005-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/index.html: thank bandwidth sponsor.

2005-02-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html: 
	* site/download/macos.html:
	* site/download/using.html: (These could do with a checkup by the
	package maintainers),
	* site/download/getting-started.html: 
	* site/about/index.html:
	* site/switch/tour.html: HTML cleanup; mainly add Revision marker,
	add missing closing tags, missing attribute quoting, run
	indent-region.

	* TRANSLATION: New file.

2005-01-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/translate.py: Bugfix. 

	* GNUmakefile (%.png): Crop generated images.  
	* (po/$(LANG).po): 
	* (po/newweb.pot): Update.

2005-01-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/switch/howto.html: Cleanups and langify urls.

	* site/graphics/annotate-example-single-part.svg:
	* site/graphics/annotate-example-score.svg: 
	* site/graphics/annotate-example-parts.svg: 
	* site/graphics/annotate-example-lead.svg: 
	* site/graphics/annotate-example-2.svg: 
	* site/graphics/annotate-example-1.svg: Add gettext markers.

	* scripts/translate.py: New script.

	* GNUmakefile: Use it.

	* site/index.html: Add CVS Revision marker, for tracking
	translated versions.

	* README: Add some words for translators.

	* nl/about/browser-language.html: 
	* site/about/browser-language.html: New page.

	* scripts/format-page.py: Do not bracket location items.  Add text
	and link to browser-language page link to language menu.

	* todo: Remove

	* scripts/aqua-pill-button.scm:
	* scripts/lily-button.scm:
	* scripts/dump-lily-web.sh: Move from top.
	
2005-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/switch/advantages.html: HTML fixes.

	* scripts/format-page.py (grab_gettext): Strip .html from [most]
	local urls.

	* nl/switch/index.html: 
	* nl/index.html: Update.

	* scripts/format-page.py: Refactor.
	(get_menu): Be safer.
	(langify_url): Remove.

	* site/template.ihtml: New file.
