@@ -1,8 +1,11 @@
-<HTML><!-- Generated from @FILE_NAME@
-           by format-page.py; changes will be lost. !-->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+  <HTML lang="en">
+  <!-- Generated from @FILE_NAME@
+       by format-page.py; changes will be lost. !-->
   <!-- NOTE: do not edit this file, get the SOURCE from CVS !-->
   <HEAD>
     <TITLE>@TITLE@</TITLE>
+    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
     <LINK REL="stylesheet" TYPE="text/css" HREF="@DEPTH@newweb.css">
     <LINK REL="shortcut icon" HREF="@IMAGES@shortcut.png">
     @SCRIPT@
